--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -3,7 +3,7 @@ name: Deploy DotNet project to Azure Function App
 on:
   [push]
 
-# CONFIGURATIONS
+# CONFIGURATION
 # For help, go to https://github.com/Azure/Actions
 #
 # 1. Set up the following secrets in your repository:
