--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -2,8 +2,11 @@ name: Deploy DotNet project to Azure Function App
 
 on:
   push:
-    branches:
-      - master
+  # Also trigger on page_build, as well as release created events
+  page_build:
+  release:
+    types: # This configuration does not affect the page_build event above
+      - created
 
 # CONFIGURATION
 # For help, go to https://github.com/Azure/Actions
