--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -2,8 +2,9 @@ name: Deploy DotNet project to Azure Function App
 
 on:
   push:
-    paths:
-      - 'release/*.*.*.*'
+    # Sequence of patterns matched against refs/tags
+    tags:
+      - '/*.*.*.*' # Push events to matching v*, i.e. v1.0, v20.15.10
     
 # CONFIGURATION
 # For help, go to https://github.com/Azure/Actions
