--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -1,11 +1,12 @@
 name: Deploy DotNet project to Azure Function App
 
-on:
-  push:
-    # Sequence of patterns matched against refs/tags
-    tags:
-      - 'release/*.*.*.*' # Push events to matching v*, i.e. v1.0, v20.15.10
-    
+on:  
+  create:
+  release:
+      types: # This configuration does not affect the page_build event above
+      - created
+
+
 # CONFIGURATION
 # For help, go to https://github.com/Azure/Actions
 #
