--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -1,10 +1,8 @@
 name: Deploy DotNet project to Azure Function App
 
-on:  
-  create:
-    release:
-        types: # This configuration does not affect the page_build event above
-        - created
+on:
+  release:
+    types: [published]
 
 
 # CONFIGURATION
