--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -2,7 +2,7 @@ name: Deploy DotNet project to Azure Function App
 
 on:
   release:
-    types: [published]
+    types: [created, edited, published]
 
 
 # CONFIGURATION
