--- a/.github/workflows/CreateRelease.yml
+++ b/.github/workflows/CreateRelease.yml
@@ -13,30 +13,30 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    – name: Check out code
+    - name: Check out code
       uses: actions/checkout@v2
-    – name: Create release branch
+    - name: Create release branch
       run: git checkout -b release/v${{ github.event.inputs.versionName }}
-    – name: Initialize mandatory git config
+    - name: Initialize mandatory git config
       run: |
        git config user.name "GitHub Actions"
        git config user.email noreply@github.com
-    – name: Change version number and name
+    - name: Change version number and name
       run: printf 'ext.version_code = ${{ github.event.inputs.versionCode }}\next.version_name = "${{ github.event.inputs.versionName }}"\n' > app_versions.gradle
-    – name: Update Changelog
+    - name: Update Changelog
       uses: thomaseizinger/keep-a-changelog-new-release@v1
       with:
         version: ${{ github.event.inputs.versionName }}
-    – name: Commit changelog and manifest files
+    - name: Commit changelog and manifest files
       id: make-commit
       run: |
         git add app_versions.gradle
         git add CHANGELOG.md
-        git commit –message "Prepare release ${{ github.event.inputs.versionName }}"
+        git commit --message "Prepare release ${{ github.event.inputs.versionName }}"
         echo "::set-output name=commit::$(git rev-parse HEAD)"
-    – name: Push new branch
+    - name: Push new branch
       run: git push origin release/v${{ github.event.inputs.versionName }}
-    – name: Submit strings.xml for translation
+    - name: Submit strings.xml for translation
       uses: andstor/copycat-action@v3
       with:
         personal_token: ${{ secrets.ANDROID_I18N_PAT }}
@@ -48,7 +48,7 @@ jobs:
         dst_branch: master
         clean: true
         commit_message: release/v${{ github.event.inputs.versionName }} BOT New Strings for translation submitted.
-    – name: Create pull request into main
+    - name: Create pull request into main
       uses: thomaseizinger/create-pull-request@1.0.0
       with:
        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -60,7 +60,7 @@ jobs:
            Hi!
            This PR was created in response workflow running.
            I've updated the version name and code commit: ${{ steps.make-commit.outputs.commit }}.
-    – name: Create pull request to develop
+    - name: Create pull request to develop
       uses: thomaseizinger/create-pull-request@1.0.0
       with:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
