--- a/.github/workflows/CreateRelease.yml
+++ b/.github/workflows/CreateRelease.yml
@@ -23,10 +23,10 @@ jobs:
        git config user.email noreply@github.com
     - name: Change version number and name
       run: printf 'ext.version_code = ${{ github.event.inputs.versionCode }}\next.version_name = "${{ github.event.inputs.versionName }}"\n' > app_versions.gradle
-    - name: Create Changelogs
+    #- name: Create Changelogs
       # You may pin to the exact commit or the version.
       # uses: heineiuo/create-changelogs@49aa3f7303691733d4425e9e04a41bb409c44826
-      uses: heineiuo/create-changelogs@v0.2.8
+    #  uses: heineiuo/create-changelogs@v0.2.8
     - name: Commit changelog and manifest files
       id: make-commit
       run: |
