--- a/.github/workflows/ReleaseV1.yml
+++ b/.github/workflows/ReleaseV1.yml
@@ -1,17 +1,29 @@
-- name: GH Release
-  # You may pin to the exact commit or the version.
-  # uses: softprops/action-gh-release@b7e450da2a4b4cb4bfbae528f788167786cfcedf
-  uses: softprops/action-gh-release@v0.1.5
-  with:
-    # Note-worthy description of changes in release
-    body: # optional
-    # Path to load note-worthy description of changes in release from
-    body_path: # optional
-    # Gives the release a custom name. Defaults to tag name
-    name: # optional
-    # Creates a draft release. Defaults to false
-    draft: # optional
-    # Identify the release as a prerelease. Defaults to false
-    prerelease: # optional
-    # Newline-delimited list of path globs for asset files to upload
-    files: # optional
+name: Create Release
+on:
+  workflow_dispatch:
+    inputs:
+      versionName:
+        description: 'Number of version  (ie 5.5.0.1)'
+        required: true
+
+jobs:
+  build:
+    name: Create Release
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+      - name: Create Release
+        id: create_release
+        uses: actions/create-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token is provided by Actions, you do not need to create your own token
+        with:
+          tag_name: ${{ github.ref }}
+          release_name: Release ${{ github.ref }}
+          body: |
+            Changes in this Release
+            - First Change
+            - Second Change
+          draft: false
+          prerelease: false
