--- a/.github/workflows/DeployByReleaseNumber.yml
+++ b/.github/workflows/DeployByReleaseNumber.yml
@@ -1,4 +1,4 @@
-name: Deploy DotNet project to Azure Function App V2
+name: Deploy DotNet project to Azure Function App by Release number
 
 on:
   workflow_dispatch:
