--- a/.github/workflows/DeployOnBranchChanges.yml
+++ b/.github/workflows/DeployOnBranchChanges.yml
@@ -1,4 +1,4 @@
-name: Deploy DotNet project to Azure Function App on Release Changes (not working...)
+name: Deploy on Release Changes
 
 on: #[create, push]
    push:
